Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27349

ASAN use-after-poison in Query_log_event::Query_log_event/THD::binlog_query

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.8(EOL)
    • N/A
    • Replication
    • None

    Description

      preview-10.8-MDEV-11675-rpl-lag-free-alter 8fc5d21de2530bf7ca9edd05

      =================================================================
      ==2717503==ERROR: AddressSanitizer: use-after-poison on address 0x629000370dd8 at pc 0x564765ac8c41 bp 0x7f63740f3f90 sp 0x7f63740f3f80
      READ of size 4 at 0x629000370dd8 thread T25
          #0 0x564765ac8c40 in Query_log_event::Query_log_event(THD*, char const*, unsigned long, bool, bool, bool, int) /10.8/sql/log_event_server.cc:1552
          #1 0x564764d287d5 in THD::binlog_query(THD::enum_binlog_query_type, char const*, unsigned long, bool, bool, bool, int) /10.8/sql/sql_class.cc:7626
          #2 0x5647650f25c2 in write_bin_log(THD*, bool, char const*, unsigned long, bool) /10.8/sql/sql_table.cc:1009
          #3 0x564765acaa52 in Query_log_event::handle_split_alter_query_log_event(rpl_group_info*, bool&) /10.8/sql/log_event_server.cc:1827
          #4 0x564765acd1fa in Query_log_event::do_apply_event(rpl_group_info*, char const*, unsigned int) /10.8/sql/log_event_server.cc:2116
          #5 0x564765ac94c8 in Query_log_event::do_apply_event(rpl_group_info*) /10.8/sql/log_event_server.cc:1612
          #6 0x564764bc75b6 in Log_event::apply_event(rpl_group_info*) /10.8/sql/log_event.h:1518
          #7 0x564764ba8953 in apply_event_and_update_pos_apply /10.8/sql/slave.cc:3881
          #8 0x564764ba9869 in apply_event_and_update_pos_for_parallel(Log_event*, THD*, rpl_group_info*) /10.8/sql/slave.cc:4078
          #9 0x5647654590f2 in rpt_handle_event /10.8/sql/rpl_parallel.cc:62
          #10 0x5647654613ce in handle_rpl_parallel_thread /10.8/sql/rpl_parallel.cc:1409
          #11 0x564765f8a10c in pfs_spawn_thread /10.8/storage/perfschema/pfs.cc:2201
          #12 0x7f6383f9f608 in start_thread /build/glibc-eX1tMB/glibc-2.31/nptl/pthread_create.c:477
          #13 0x7f6383b72292 in __clone (/lib/x86_64-linux-gnu/libc.so.6+0x122292)
       
      0x629000370dd8 is located 3032 bytes inside of 16516-byte region [0x629000370200,0x629000374284)
      allocated by thread T25 here:
          #0 0x7f638449abc8 in malloc (/lib/x86_64-linux-gnu/libasan.so.5+0x10dbc8)
          #1 0x564766be821d in sf_malloc /10.8/mysys/safemalloc.c:126
          #2 0x564766bb5443 in my_malloc /10.8/mysys/my_malloc.c:90
          #3 0x564766b900df in root_alloc /10.8/mysys/my_alloc.c:66
          #4 0x564766b91010 in reset_root_defaults /10.8/mysys/my_alloc.c:243
          #5 0x564764cfc07e in THD::init_for_queries() /10.8/sql/sql_class.cc:1393
          #6 0x56476545f13b in handle_rpl_parallel_thread /10.8/sql/rpl_parallel.cc:1109
          #7 0x564765f8a10c in pfs_spawn_thread /10.8/storage/perfschema/pfs.cc:2201
          #8 0x7f6383f9f608 in start_thread /build/glibc-eX1tMB/glibc-2.31/nptl/pthread_create.c:477
       
      Thread T25 created by T19 here:
          #0 0x7f63843c7805 in pthread_create (/lib/x86_64-linux-gnu/libasan.so.5+0x3a805)
          #1 0x564765f850c2 in my_thread_create /10.8/storage/perfschema/my_thread.h:48
          #2 0x564765f8a4ff in pfs_spawn_thread_v1 /10.8/storage/perfschema/pfs.cc:2252
          #3 0x564765457a4f in inline_mysql_thread_create /10.8/include/mysql/psi/mysql_thread.h:1139
          #4 0x564765462d2a in rpl_parallel_change_thread_count /10.8/sql/rpl_parallel.cc:1653
          #5 0x564765463f67 in rpl_parallel_activate_pool(rpl_parallel_thread_pool*) /10.8/sql/rpl_parallel.cc:1797
          #6 0x564764bb12b2 in handle_slave_sql /10.8/sql/slave.cc:5329
          #7 0x564765f8a10c in pfs_spawn_thread /10.8/storage/perfschema/pfs.cc:2201
          #8 0x7f6383f9f608 in start_thread /build/glibc-eX1tMB/glibc-2.31/nptl/pthread_create.c:477
       
      Thread T19 created by T16 here:
          #0 0x7f63843c7805 in pthread_create (/lib/x86_64-linux-gnu/libasan.so.5+0x3a805)
          #1 0x564765f850c2 in my_thread_create /10.8/storage/perfschema/my_thread.h:48
          #2 0x564765f8a4ff in pfs_spawn_thread_v1 /10.8/storage/perfschema/pfs.cc:2252
          #3 0x564764b8ede2 in inline_mysql_thread_create /10.8/include/mysql/psi/mysql_thread.h:1139
          #4 0x564764b97117 in start_slave_thread(unsigned int, void* (*)(void*), st_mysql_mutex*, st_mysql_mutex*, st_mysql_cond*, unsigned int volatile*, unsigned long volatile*, Master_info*) /10.8/sql/slave.cc:1150
          #5 0x564764b97c5d in start_slave_threads(THD*, bool, bool, Master_info*, char const*, char const*, int) /10.8/sql/slave.cc:1276
          #6 0x564764f222a9 in start_slave(THD*, Master_info*, bool) /10.8/sql/sql_repl.cc:3274
          #7 0x564764e48acc in mysql_execute_command(THD*, bool) /10.8/sql/sql_parse.cc:4245
          #8 0x564764e63986 in mysql_parse(THD*, char*, unsigned int, Parser_state*) /10.8/sql/sql_parse.cc:8028
          #9 0x564764e39a83 in dispatch_command(enum_server_command, THD*, char*, unsigned int, bool) /10.8/sql/sql_parse.cc:1894
          #10 0x564764e367a7 in do_command(THD*, bool) /10.8/sql/sql_parse.cc:1402
          #11 0x5647652da57c in do_handle_one_connection(CONNECT*, bool) /10.8/sql/sql_connect.cc:1418
          #12 0x5647652d9e08 in handle_one_connection /10.8/sql/sql_connect.cc:1312
          #13 0x564765f8a10c in pfs_spawn_thread /10.8/storage/perfschema/pfs.cc:2201
          #14 0x7f6383f9f608 in start_thread /build/glibc-eX1tMB/glibc-2.31/nptl/pthread_create.c:477
       
      Thread T16 created by T0 here:
          #0 0x7f63843c7805 in pthread_create (/lib/x86_64-linux-gnu/libasan.so.5+0x3a805)
          #1 0x564765f850c2 in my_thread_create /10.8/storage/perfschema/my_thread.h:48
          #2 0x564765f8a4ff in pfs_spawn_thread_v1 /10.8/storage/perfschema/pfs.cc:2252
          #3 0x564764a7eb68 in inline_mysql_thread_create /10.8/include/mysql/psi/mysql_thread.h:1139
          #4 0x564764a96852 in create_thread_to_handle_connection(CONNECT*) /10.8/sql/mysqld.cc:5969
          #5 0x564764a96ece in create_new_thread(CONNECT*) /10.8/sql/mysqld.cc:6028
          #6 0x564764a9723b in handle_accepted_socket(st_mysql_socket, st_mysql_socket) /10.8/sql/mysqld.cc:6090
          #7 0x564764a97c10 in handle_connections_sockets() /10.8/sql/mysqld.cc:6214
          #8 0x564764a9605f in mysqld_main(int, char**) /10.8/sql/mysqld.cc:5864
          #9 0x564764a7de8c in main /10.8/sql/main.cc:34
          #10 0x7f6383a770b2 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x270b2)
       
      SUMMARY: AddressSanitizer: use-after-poison /10.8/sql/log_event_server.cc:1552 in Query_log_event::Query_log_event(THD*, char const*, unsigned long, bool, bool, bool, int)
      Shadow bytes around the buggy address:
        0x0c5280066160: f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7
        0x0c5280066170: f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7
        0x0c5280066180: f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7
        0x0c5280066190: f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7
        0x0c52800661a0: f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7
      =>0x0c52800661b0: f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7[f7]f7 f7 f7 f7
        0x0c52800661c0: f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7
        0x0c52800661d0: f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7
        0x0c52800661e0: f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7
        0x0c52800661f0: f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7
        0x0c5280066200: f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7 f7
      Shadow byte legend (one shadow byte represents 8 application bytes):
        Addressable:           00
        Partially addressable: 01 02 03 04 05 06 07 
        Heap left redzone:       fa
        Freed heap region:       fd
        Stack left redzone:      f1
        Stack mid redzone:       f2
        Stack right redzone:     f3
        Stack after return:      f5
        Stack use after scope:   f8
        Global redzone:          f9
        Global init order:       f6
        Poisoned by user:        f7
        Container overflow:      fc
        Array cookie:            ac
        Intra object redzone:    bb
        ASan internal:           fe
        Left alloca redzone:     ca
        Right alloca redzone:    cb
        Shadow gap:              cc
      ==2717503==ABORTING
      

       
      --disable_abort_on_error
       
      --source include/master-slave.inc
      --source include/have_log_bin.inc
      --source include/have_binlog_format_statement.inc
       
      --connection master
      set binlog_alter_two_phase=YES;
       
      --connection slave
      STOP SLAVE;
      set global slave_parallel_threads=8;
       
      --connection slave
      RESET SLAVE;
      --source include/start_slave.inc
      --connection master
       
      CREATE TABLE CC (pk int auto_increment, col_int_nokey int , col_int_key int, col_date_key DATE, col_date_nokey DATE , col_time_key time, col_time_nokey time , col_datetime_key datetime, col_datetime_nokey datetime , col_varchar_key varchar(1), col_varchar_nokey varchar(1) , PRIMARY KEY (pk), KEY (col_int_key), KEY (col_date_key), KEY (col_time_key), KEY (col_datetime_key), KEY (col_varchar_key, col_int_key))  ;
      CREATE TABLE DD (pk int auto_increment, col_int_nokey int , col_int_key int, col_date_key DATE, col_date_nokey DATE , col_time_key time, col_time_nokey time , col_datetime_key datetime, col_datetime_nokey datetime , col_varchar_key varchar(1), col_varchar_nokey varchar(1) , PRIMARY KEY (pk), KEY (col_int_key), KEY (col_date_key), KEY (col_time_key), KEY (col_datetime_key), KEY (col_varchar_key, col_int_key))  ;
      ALTER ONLINE IGNORE TABLE `DD` /*!100301 WAIT 8 */ ADD CONSTRAINT CHECK (ecol9 < ncol8) ;
       
      CREATE TEMPORARY TABLE tmp17 AS SELECT VAR_SAMP( `col_date_key` ) AS field1, COUNT( `col_varchar_nokey` ) OVER ( ) AS field2, SUM( CEILING( `col_int_nokey` ) ) AS field3, BIT_AND( ( LEFT( `col_int_key`, '19:19:12.057882' ) ) ) OVER ( ) AS field4, SUM( POW( ( TAN( `col_varchar_nokey` ) ), -13886 ) ) OVER ( ) AS field5 FROM `A` ORDER BY MONTH( `col_varchar_nokey` ), CONCAT( ( LAST_DAY( ( LN( `col_datetime_nokey` ) ) ) ), -4602678819172646912, ( BIN( 'a' ) ), ( REVERSE( `col_int_key` ) ), 0 )  ;
      DROP TABLE IF EXISTS tmp17 ;
      SELECT DISTINCT AVG( 'f' ) OVER ( ) AS field1, BIT_AND( ( ~ ( @A := ( MID( ( @A := ( PI( ) ) ), `col_time_nokey`, `col_date_key` ) ) ) ) ) AS field2 FROM `A` ORDER BY `col_int_nokey`, SUBSTR( -1193 FROM ( FIELD( ( LOG10( `col_varchar_nokey` ) ), 'igwegcnfeuvrgnecpthmhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbxthdcprswpjxixmvfwmsyseblwcvumvyvbitxqjxdzdytunqvvrmpyxrencqhuyrfluezqekmqpwutxnzddrbjycyoyqbzsoxvillooqxuvoxcgohdbytybwcqxdwtqrebgjzbycekyjgbpmqadutr' ) ) FOR ( ~ `col_datetime_nokey` ) )  ;
      CREATE TABLE tmp18 AS SELECT DISTINCT GROUP_CONCAT( ~ ( EXPORT_SET( ( IF( `col_date_key`, ( CONCAT( `col_time_nokey` ) ), ( EXP( ( 31919 ) ) ) ) ), `col_datetime_key`, ( DATE_ADD( `col_time_key`, INTERVAL '2016-04-24 21:49:54.010640' SECOND ) ), `col_time_nokey` ) ), @A := ( NULLIF( `col_varchar_nokey`, -26791 ) ) ) AS field1 FROM `CC` ORDER BY DEGREES( `col_date_key` ), NULLIF( `col_date_key`, '2025-06-08 00:05:54.016021' ) LIMIT 84  ;
      DROP TABLE IF EXISTS tmp18 ;
      SELECT DISTINCT MIN( CHARACTER_LENGTH( ( FORMAT( ( `col_time_key` XOR 4876553971512115200 ), 6 ) ) ) ) OVER ( ) AS field1, SUM( @A := `pk` ) OVER ( ) AS field2, MIN( `col_int_nokey` AND '13:25:41.008917' ) OVER ( ) AS field3 FROM `C` ORDER BY ELT( `col_time_key`, `col_datetime_key` ), REVERSE( ( ( NULLIF( -24314, ( IFNULL( '16:03:40.034680', NULL ) ) ) ) ^ -5419519201586970624 ) ) LIMIT 235 ;
      ALTER IGNORE TABLE t8 RENAME TO `CC`  ;
      CREATE TEMPORARY TABLE tmp19 AS SELECT MIN( @A := 'm' ) OVER ( ) AS field1 FROM `D` ORDER BY @A := `col_date_key` LIMIT 131  ;
      DROP TABLE IF EXISTS tmp19 ;
      SELECT DISTINCT NULLIF( -21153, '1972-03-07' ) AS field1 FROM `CC`  ;
      SELECT MIN( LTRIM( 0 ) ) OVER ( ) AS field1, VAR_POP( `col_int_nokey` ) AS field2 FROM `BB` LIMIT 28 ;
      SELECT DISTINCT SEC_TO_TIME( `col_time_key` ) AS field1 FROM `AA`  ;
      SELECT MIN( @A := ( `col_time_nokey` & ( ( IFNULL( `col_time_key`, ( LEFT( ( @A := -4167 ), 13003 ) ) ) ) % '2035-08-03 03:40:01.041119' ( MONTHNAME( ( ( '2000-05-02' ^ `col_varchar_key` ) * 4105031060348207104 `col_time_key` < ( `col_date_key` - ( LOG10( ( `col_date_key` LIKE '16:59:24.037522' ) ) ) INTERVAL( ( TIMESTAMP( ( ATAN( 'wegcnfeuvrgnecpthmhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbx' ) ), NULL ) ), ( TIMESTAMP( -7401, `col_varchar_nokey` ) ), 0, 21489, -1528972073492283392, `col_varchar_nokey`, `col_int_nokey` ) ) ) ) ) <= `col_datetime_nokey` ) ) ) OVER ( ) AS field1, VARIANCE( `col_time_nokey` ) AS field2 FROM `C` ORDER BY LOG( ( FLOOR( `col_int_nokey` ) ) ), '10:53:40.014539' OR `col_varchar_nokey` LIMIT 21 ;
      SELECT STDDEV_POP( `col_time_nokey` ) AS field1 FROM `E` ORDER BY @A := `pk`  ;
      SELECT DISTINCT BIT_AND( ( 21132 MOD `col_datetime_nokey` GREATEST( ( ELT( `col_datetime_nokey`, `col_time_key`, `col_datetime_nokey`, 783, ( HEX( `pk` ) ), 'gcnfeuvrgnecpthmhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbxthdcprswpjxixmvfwmsyseblwcvumvyvbitxqjxdzdytunqvvrmpyxrencqhuyrfluezqekmqpwutxnzddrbjycyoyqbzsoxvillooqxuvox', 25889, `col_date_nokey`, ( LOG( ( LN( 'cnfeuvrgnecpthmhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbxthdcprs' ) ) ) ), ( @A := `col_int_key` ) ) ), ( DAY( ( IF( ( SUBSTR( ( EXPORT_SET( `col_time_nokey`, ( ( IF( ( ( NULLIF( 3564317630087036928, NULL ) ) ), ( NULLIF( ( 'nfeuvrgnecpthmhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbxthdcprswpjxixmvfwmsyseblwcvumvyvbitx' * `col_int_key` 'feuvrgnecpthmhffqbythjwpukqubzpomntrd' <=> '2009-09-16 20:49:09.064033' ), ( FROM_UNIXTIME( `col_time_key`, -24108 ) ) ) ), '1986-11-12' ) ) % `pk` ( LOCATE( ( ADDTIME( ( IFNULL( '02:50:08.059257', ( 'i' MOD `col_datetime_nokey` ISNULL( ( TRIM( 0 FROM '1982-02-01' ) ) ) ) ) ), ( IFNULL( ( ASCII( '21:17:07.014776' ) ), `col_varchar_nokey` ) ) ) ), `pk` ) ) LIKE `col_int_key` ), ( IF( ( COS( ( CHAR_LENGTH( `col_varchar_key` ) ) ) ), `col_time_key`, '2022-04-20 02:42:26.064997' ) ), '08:59:59.053900', 'euvrgnecpthmhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbxthdcprswpjxixmvfwmsyseblwcvumvyvbitxqjxdzdytunqvvrmpyxrencqhuyrfluezqekmqpwutxnzddrbjycyoyqbzsoxvillooqxuvoxcgohdbytybwcqxdwtqrebgjzbycekyjgbpmqadut' ) ) FROM `col_time_nokey` ) ), `col_time_key`, `col_varchar_key` ) ) ) ) ) ) ) OVER ( ) AS field1, STDDEV_SAMP( NULL ) AS field2, ( TO_SECONDS( `pk` ) ) AS field3 FROM `BB` ORDER BY `col_time_nokey` ^ ( @A := ( LOWER( `col_date_key` ) ) )  ;
      SELECT `col_date_key` ^ ( IF( ( @A := '2015-03-02 02:51:15.065237' ), `pk`, '2016-06-13 06:17:52.024413' ) ) AS field1, BIT_AND( `col_varchar_nokey` ) OVER ( ) AS field2 FROM `B`  ;
      ALTER TABLE t9 ADD CONSTRAINT CHECK (ecol7 LIKE icol1) ;
      SELECT @A := '17:41:55.029354' AS field1, BIT_AND( `col_varchar_key` ) OVER ( ) AS field2 FROM `A` ORDER BY 'uvrgnecpthmhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbxthdcprswpjxixmvfwmsyseblwcvumvyvbitxqjxdzdytunqvv' XOR '2020-01-12 22:50:49.017673', - 'n' '2030-05-11 05:59:51.002763' <=> ( REVERSE( ( TIME_FORMAT( ( @A := 'q' ), `col_varchar_nokey` ) ) ) ) LIMIT 91 ;
      SELECT DISTINCT BIT_AND( `col_int_key` ) OVER ( ) AS field1, VAR_SAMP( `pk` ) AS field2, BIT_OR( `col_date_key` ) OVER ( ) AS field3, SUM( -2603925009550278656 && 0 ) AS field4 FROM `DD` ORDER BY @A := `col_varchar_key`  ;
      CREATE TABLE tmp20 AS SELECT BIT_LENGTH( ( IF( `col_date_nokey`, ( CONV( `col_varchar_key`, 91, 253 ) ), 5909567136040222720 ) ) ) AS field1 FROM `CC` LIMIT 165  ;
      DROP TABLE IF EXISTS tmp20 ;
      SELECT AVG( 'vrgnecpthmhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbxthdcprswpjxixmvfwmsyseblwcvumvyvbitxqjxdzdytunqvvrmpyxrenc' ) OVER ( ) AS field1, DATE_SUB( 6627328326652395520, INTERVAL ( ( ! ( TIMESTAMPDIFF( HOUR, ( ( NULLIF( ( CURRENT_TIMESTAMP() ), `col_time_nokey` ) ) && `col_varchar_nokey` ), `pk` ) ) ) DIV 0 ( ( NULLIF( `col_int_nokey`, `col_varchar_key` ) ) AND ( ( IFNULL( `col_datetime_key`, `col_datetime_key` ) ) NOT LIKE ( 'h' SOUNDS LIKE ( @A := NULL ) ) ) ) > '2032-05-25' ) HOUR_SECOND ) AS field2 FROM `DD` ORDER BY `col_time_key` + `col_int_nokey` 0 > 'a' LIMIT 142 ;
      SELECT DISTINCT WEEK( `col_date_nokey`, 1 ) AS field1 FROM `E`  ;
      ROLLBACK ;
      SELECT GROUP_CONCAT( `col_time_nokey` OR 2721, DATEDIFF( 'y', '1984-04-05 03:11:24.053925' ) ) AS field1, AVG( -3348707797926674432 ) OVER ( ) AS field2 FROM `A` ORDER BY IF( ( NULLIF( `col_time_key`, 'rgnecpthmhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbxthdcprswpjxixmvfwmsyseblwcvumvyv' ) ), NULL, ( TRIM( ( EXP( `col_int_key` ) ) FROM NULL ) ) ) LIMIT 34 ;
       
      SELECT DISTINCT @A := '22:46:23.005895' AS field1, BIT_AND( `col_int_nokey` ) OVER ( ) AS field2 FROM `CC` ORDER BY ABS( '13:38:08.043401' ) LIMIT 147 ;
      CREATE OR REPLACE TABLE t7 (icol3 INT UNSIGNED NULL ) ROW_FORMAT = REDUNDANT  ;
      SELECT DISTINCT BIT_AND( -8643533584830824448 ) OVER ( ) AS field1 FROM `DD`  ;
      SELECT -29920 OR 14256 AS field1, LPAD( ( IF( 'gnecpthmhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbxthdcprswpjxixmvfwmsyseblwcvumvyvbitxqjxdzdytunqvvrmpyxrencqhuyrfluezqekmqpwutxnzddrbjycyoyqbzsoxvillooqxuvoxcgohdbytybwcqxdwtqrebgjzbycekyjgbpmqadutrqluyxhrdodxqqjw', `col_datetime_key`, ( MOD( 'z', ( IF( `col_date_nokey`, `col_date_nokey`, `col_varchar_nokey` ) ) ) ) ) ), 'r', 20401 ) AS field2 FROM `BB` ORDER BY LOG( ( 'a' NOT LIKE ( `col_time_key` ) ) )  ;
      SELECT DISTINCT BIT_AND( `col_date_key` ) OVER ( ) AS field1, STD( 0 ) AS field2, `col_date_key` && ( '2011-11-17 22:27:51.056551' ) AS field3 FROM `E`  ;
       
      SELECT ! `col_int_nokey` AS field1, COUNT( `col_date_nokey` ) OVER ( ) AS field2 FROM `B` ORDER BY IFNULL( 'd', ( ( UCASE( `col_datetime_nokey` ) ) ) ), CURDATE()  ;
      ALTER TABLE t10 REMOVE PARTITIONING ;
      CREATE TEMPORARY TABLE tmp21 AS SELECT IF( '1982-06-01', ( IF( ( @A := ( ( IFNULL( `col_int_nokey`, `col_int_key` ) ) / ( @A := `col_datetime_key` ) '1991-04-02' <= ( CURRENT_TIME() ) ) ), `col_varchar_nokey`, NULL ) ), ( ACOS( ( FORMAT( `pk`, 7, 'en_US' ) ) ) ) ) AS field1, @A := ( ( LCASE( ( @A := `col_int_nokey` ) ) ) >> `col_datetime_key` ) AS field2 FROM `A` ORDER BY POSITION( 'i' IN ( NULLIF( ( ( LOCALTIME() ) ), ( 'ecpthmhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbxthdcprswpjxixmvfwmsyseblwcvumvyvbitxqjxdzdytunqvvrmpyxrencqhuyrfluezqekmqpwutxnzddrbjycyoyqbzsoxvillooqxuvoxcgoh' << 'z' ) ) ) )  ;
      DROP TABLE IF EXISTS tmp21 ;
      SELECT STD( -28456 ) AS field1, BIT_COUNT( -3781334837130952704 ) AS field2 FROM `C` LIMIT 173 ;
      SELECT GROUP_CONCAT( LOCATE( ( CURRENT_TIME ), 0 ), @A := '20:06:08.001003' ) AS field1 FROM `D` LIMIT 243 ;
      CREATE TABLE `A` LIKE `D` ;
      ALTER IGNORE TABLE t8 ADD FOREIGN KEY (tcol5) REFERENCES t8 (tscol9) ON UPDATE SET DEFAULT, DROP CONSTRAINT IF EXISTS s ;
      ALTER TABLE `B` DROP COLUMN IF EXISTS tcol6, ALGORITHM=INPLACE, RENAME TO t9, DROP INDEX ind7, DROP CONSTRAINT f ;
      SELECT ( REPEAT( '2035-12-11', '20:50:12.006349' ) ) MOD '19:31:27.009867' `col_varchar_key` > ( - ( 'i' XOR `col_datetime_nokey` ) `col_datetime_key` IN ( ( WEEKOFYEAR( ( SIGN( '2013-05-28 18:14:15.043293' ) ) ) ), ( NULLIF( ( NULLIF( ( IFNULL( ( NULLIF( ( SIN( `col_varchar_nokey` ) ), 'thmhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbxthdcprswpjxixmvfwmsyseblwcvumvyvbitxqjxdzdytunqvvrmpyxrencqhuyrfluezqekmqpwu' ) ), 'hmhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbxthdcprswpjxixmvfwmsyseblwcvumvyvbitxqjxdzdytunqvvrmpyxrencqhuyrfluezqekmqpwutxnzddrbjycyoyqbzsoxvillooqxuvoxcgohdbytybwcqxdwtqrebgjzbycekyjgbpmqadutrqluyxhrdodxqqjwasfkv' ) ), '17:07:22.006036' ) ), ( QUOTE( ( NULLIF( `col_date_key`, ( IFNULL( `col_datetime_nokey`, '1980-02-09' ) ) ) ) ) ) ) ), 'mhffqbythjwpukqubzpomntrddrwhzjtqvbjiklcekxqyoxsolbxthdcprswpjxixmvfwmsyseblwcvumvyvbitxqjxdzdytunqvvrmpyxrencqhuyrfluezqek' ) ) AS field1 FROM `CC`  ;
      ALTER IGNORE TABLE `CC` MODIFY COLUMN scol4 VARCHAR(60460) NOT NULL FIRST, LOCK=NONE ;
      SELECT BIT_OR( `pk` ) OVER ( ) AS field1 FROM `DD`  ;
       
      ALTER TABLE `DD` DROP CONSTRAINT IF EXISTS n, DROP FOREIGN KEY e ;
      show binlog events;
       
      --sync_slave_with_master
      show tables;
      --source include/rpl_end.inc
       
      
      

      Attachments

        Issue Links

          Activity

            People

              Elkin Andrei Elkin
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 1h
                  1d 1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.